tests/run/error_string_mix.ig
// error_string_mix.ig — no coercion: string + int is rejected.
fn main() -> string {
    return "x" + 1
}
